--- a/l3kernel/l3color.dtx
+++ b/l3kernel/l3color.dtx
@@ -342,6 +342,10 @@
 %      model, the second containing space-separated values appropriate
 %      for the model; this is the format required by backend functions
 %      of \pkg{expl3}
+%    \item \texttt{comma-sep-cmyk} Comma-separated cyan-magenta-yellow-black
+%      values
+%    \item \texttt{comma-sep-rgb} Comma-separated red-green-blue values
+%      suitable for use as a PDF annotation color
 %    \item \texttt{HTML} Uppercase two-digit hexadecimal values, expressing
 %      a red-green-blue color; the digits are \emph{not} separated
 %    \item \texttt{space-sep-cmyk} Space-separated cyan-magenta-yellow-black
@@ -1554,25 +1558,38 @@
 %
 % \begin{variable}
 %   {
+%     \c_@@_export_comma-sep-cmyk_tl ,
+%     \c_@@_export_comma-sep-rgb_tl  ,
 %     \c_@@_export_HTML_tl           ,
 %     \c_@@_export_space-sep-cmyk_tl ,
 %     \c_@@_export_space-sep-rgb_tl
 %   }
 %    \begin{macrocode}
+\tl_const:cn { c_@@_export_comma-sep-cmyk_tl } { cmyk }
+\tl_const:cn { c_@@_export_comma-sep-rgb_tl } { rgb }
 \tl_const:Nn \c_@@_export_HTML_tl { rgb }
 \tl_const:cn { c_@@_export_space-sep-cmyk_tl } { cmyk }
 \tl_const:cn { c_@@_export_space-sep-rgb_tl } { rgb }
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\@@_export_format_space-sep-cmyk:nnN}
-% \begin{macro}{\@@_export_space-sep-cmyk:Nw}
+% \begin{macro}
+%   {\@@_export_format_comma-sep-cmyk:nnN, \@@_export_format_space-sep-cmyk:nnN}
+% \begin{macro}{\@@_export_space-sep-cmyk:Nw, \@@_export_comma-sep-cmyk:Nw}
 %    \begin{macrocode}
+\cs_new_protected:cpx { @@_export_format_comma-sep-cmyk:nnN } #1#2#3
+  {
+    \exp_not:N \@@_export:nnnNN { cmyk } {#1} {#2} #3
+      \exp_not:c { @@_export_comma-sep-cmyk:Nw }
+  }
 \cs_new_protected:cpx { @@_export_format_space-sep-cmyk:nnN } #1#2#3
   {
     \exp_not:N \@@_export:nnnNN { cmyk } {#1} {#2} #3
       \exp_not:c { @@_export_space-sep-cmyk:Nw }
   }
+\cs_new_protected:cpn { @@_export_comma-sep-cmyk:Nw }
+  #1#2 ~ #3 ~ #4 ~ #5 \s_@@_stop
+  { \tl_set:Nn #1 { #2 , #3 , #4 , #5 } }
 \cs_new_protected:cpn { @@_export_space-sep-cmyk:Nw } #1#2 \s_@@_stop
   { \tl_set:Nn #1 {#2} }
 %    \end{macrocode}
@@ -1581,11 +1598,13 @@
 %
 % \begin{macro}
 %   {
+%     \@@_export_format_comma-sep-rgb:nnN ,
 %     \@@_export_format_HTML:nnN          ,
 %     \@@_export_format_space-sep-rgb:nnN
 %   }
 % \begin{macro}
 %   {
+%     \@@_export_comma-sep-rgb:Nw ,
 %     \@@_export_HTML:Nw          ,
 %     \@@_export_space-sep-rgb:Nw
 %   }
@@ -1593,6 +1612,11 @@
 %   \textsc{html} values must be given in |rgb|: we force conversion if
 %   required, then do some simple maths.
 %    \begin{macrocode}
+\cs_new_protected:cpx { @@_export_format_comma-sep-rgb:nnN } #1#2#3
+  {
+    \exp_not:N \@@_export:nnnNN { rgb } {#1} {#2} #3
+      \exp_not:c { @@_export_comma-sep-rgb:Nw }
+  }
 \cs_new_protected:Npn \@@_export_format_HTML:nnN #1#2#3
   { \@@_export:nnnNN { rgb } {#1} {#2}#3 \@@_export_HTML:Nw }
 \cs_new_protected:cpx { @@_export_format_space-sep-rgb:nnN } #1#2#3
@@ -1600,6 +1624,8 @@
     \exp_not:N \@@_export:nnnNN { rgb } {#1} {#2} #3
       \exp_not:c { @@_export_space-sep-rgb:Nw }
   }
+\cs_new_protected:cpn { @@_export_comma-sep-rgb:Nw } #1#2 ~ #3 ~ #4 \s_@@_stop
+  { \tl_set:Nx #1 { #2 , #3 , #4 } }
 \cs_new_protected:Npn \@@_export_HTML:Nw #1#2 ~ #3 ~ #4 \s_@@_stop
   {
     \tl_set:Nx #1
