--- a/l3backend/l3backend-basics.dtx
+++ b/l3backend/l3backend-basics.dtx
@@ -151,6 +151,23 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\__kernel_backend_first_shipout:n}
+%   We need to write at first shipout in a few places. As we want to use the
+%   most up-to-date method, 
+%    \begin{macrocode}
+\cs_if_exist:NTF \@ifl@t@r
+  {
+    \@ifl@t@r \fmtversion { 2020-10-01 }
+      {
+        \cs_new_protected:Npn \__kernel_backend_first_shipout:n #1
+          { \hook_gput_code:nnn { shipout / firstpage } { l3backend } {#1} }
+      }
+      { \cs_new_eq:NN \__kernel_backend_first_shipout:n \AtBeginDvi }
+  }
+  { \cs_new_eq:NN \__kernel_backend_first_shipout:n \use:n }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{\texttt{dvips} backend}
 %
 %    \begin{macrocode}
@@ -187,10 +204,8 @@
 %    \begin{macrocode}
 \bool_if:NT \g__kernel_backend_header_bool
   {
-    \cs_if_exist:NTF \AtBeginDvi
-      { \AtBeginDvi }
-      { \use:n }
-        { \__kernel_backend_literal:n { header = l3backend-dvips.pro } }
+    \__kernel_backend_first_shipout:n
+      { \__kernel_backend_literal:n { header = l3backend-dvips.pro } }
   }
 %    \end{macrocode}
 %
