--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -226,7 +226,7 @@
 %   stream and its contents reach \TeX{}'s stomach.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_misused:n #1
-  { \__kernel_msg_error:nnx { kernel } { misused-fp } { \fp_to_tl:n {#1} } }
+  { \__kernel_msg_error:nnx { fp } { misused } { \fp_to_tl:n {#1} } }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1267,7 +1267,7 @@
 %
 % Using a floating point directly is an error.
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { kernel } { misused-fp }
+\__kernel_msg_new:nnnn { fp } { misused }
   { A~floating~point~with~value~'#1'~was~misused. }
   {
     To~obtain~the~value~of~a~floating~point~variable,~use~
