--- a/l3trial/l3fp-extras/l3fp-functions.dtx
+++ b/l3trial/l3fp-extras/l3fp-functions.dtx
@@ -124,7 +124,7 @@
       { #1 #3 }
       {
         \__kernel_msg_expandable_error:nnnnn
-          { kernel } { fp-num-args } { #1() } {#2} {#2}
+          { fp } { num-args } { #1() } {#2} {#2}
         \c_nan_fp
       }
   }
@@ -187,7 +187,7 @@
         \cs_if_exist:cT { @@_parse_word_#1:N }
           {
             \__kernel_msg_error:nnn
-              { kernel } { fp-id-already-defined } {#1}
+              { fp } { id-already-defined } {#1}
             \cs_undefine:c { @@_parse_word_#1:N }
             \cs_undefine:c { @@_#1_o:w }
           }
@@ -219,7 +219,7 @@
         \cs_if_exist:NTF #2
           {
             \__kernel_msg_warning:nnnn
-              { kernel } { fp-id-used-elsewhere } {#3} { function }
+              { fp } { id-used-elsewhere } {#3} { function }
             #1 #2 \@@_tmp:w
           }
           {
@@ -368,11 +368,6 @@
 % \end{macro}
 %
 % ^^A todo: add check for number of args
-%
-%    \begin{macrocode}
-\__kernel_msg_new:nnn { fp } { num-args }
-  { Function~#1~received~#2~arguments,~not~#3. }
-%    \end{macrocode}
 %
 %    \begin{macrocode}
 %</package>
