--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2526,23 +2526,26 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_name_strip_quotes:n #1
   {
-    \@@_name_strip_quotes:nnnw {#1} { 0 } { }
-      #1 " \q_@@_recursion_tail " \q_@@_recursion_stop
+    \@@_name_strip_quotes:nw { 0 }
+      #1 " \q_@@_recursion_tail " \q_@@_recursion_stop {#1}
   }
-\cs_new:Npn \@@_name_strip_quotes:nnnw #1#2#3#4 "
+\cs_new:Npn \@@_name_strip_quotes:nw #1#2 "
   {
-    \@@_if_recursion_tail_stop_do:nn {#4}
-      { \@@_name_strip_quotes:nnn {#1} {#2} {#3} }
-    \@@_name_strip_quotes:nnnw {#1} { #2 + 1 } { #3#4 }
+    \if_meaning:w \q_@@_recursion_tail #2
+      \@@_name_strip_quotes_end:wnwn
+    \fi:
+    #2
+    \@@_name_strip_quotes:nw { #1 + 1 }
   }
-\cs_new:Npn \@@_name_strip_quotes:nnn #1#2#3
+\cs_new:Npn \@@_name_strip_quotes_end:wnwn \fi: #1
+    \@@_name_strip_quotes:nw #2 \q_@@_recursion_stop #3
   {
-    \int_if_even:nT {#2}
+    \fi:
+    \int_if_odd:nT {#2}
       {
         \__kernel_msg_expandable_error:nnn
-          { kernel } { unbalanced-quote-in-filename } {#1}
+          { kernel } { unbalanced-quote-in-filename } {#3}
       }
-    #3
   }
 %    \end{macrocode}
 %   Spaces need to be trimmed from the start of the name and from the end of
@@ -2557,8 +2560,8 @@
   {
     \@@_quark_if_nil:nTF {#3}
       {
-        \exp_args:Ne \@@_name_trim_spaces_aux:n
-          { \tl_trim_spaces:n { #1 \s_@@_stop } }
+        \tl_trim_spaces_apply:nN { #1 \s_@@_stop }
+          \@@_name_trim_spaces_aux:n
       }
       { \tl_trim_spaces:n {#1} }
   }
