--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -724,8 +724,14 @@
 %   {\@@_backend_version_major_gset:n, \@@_backend_version_minor_gset:n}
 %   Data not available!
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_version_major_gset:n #1 { }
-\cs_new_protected:Npn \@@_backend_version_minor_gset:n #1 { }
+\cs_new_protected:Npn \@@_backend_version_major_gset:n #1
+  {
+    \cs_gset:Npn \@@_backend_version_major: { #1 }
+  }
+\cs_new_protected:Npn \@@_backend_version_minor_gset:n #1
+  {
+    \cs_gset:Npn \@@_backend_version_minor: { #1 }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
