--- a/l3kernel/l3pdf.dtx
+++ b/l3kernel/l3pdf.dtx
@@ -154,7 +154,10 @@
 %   \meta{version} requested.
 %
 %   This function may only be used up to the point where the PDF file is
-%   initialised.
+%   initialised. With dvips it sets \cs{pdf_version_major:} and \cs{pdf_version_minor:}
+%   and allows to compare the values with \cs{pdf_version_compare:Nn}, but the
+%   PDF version itself still has to be set with the command line option
+%   |-dCompatibilityLevel| of |ps2pdf|.
 % \end{function}
 %
 % \begin{function}[EXP, added = 2021-02-10]
