Evaluate PDF version data as integers

--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -725,11 +725,11 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_version_major_gset:n #1
   {
-    \cs_gset:Npn \@@_backend_version_major: { #1 }
+    \cs_gset:Npx \@@_backend_version_major: { \int_eval:n {#1} }
   }
 \cs_new_protected:Npn \@@_backend_version_minor_gset:n #1
   {
-    \cs_gset:Npn \@@_backend_version_minor: { #1 }
+    \cs_gset:Npx \@@_backend_version_minor: { \int_eval:n {#1} }
   }
 %    \end{macrocode}
 % \end{macro}
