--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1161,19 +1161,19 @@
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \ior_if_eof:N #1 { p , T , F , TF }
   {
-    \cs_if_exist:NTF #1
-      {
-        \int_compare:nTF { -1 < #1 < \c_@@_term_ior }
-          {
-            \if_eof:w #1
-              \prg_return_true:
-            \else:
-              \prg_return_false:
-            \fi:
-          }
-          { \prg_return_true: }
-      }
-      { \prg_return_true: }
+    \if_int_compare:w -1 < #1
+      \if_int_compare:w #1 < \c_@@_term_ior
+        \if_eof:w #1
+          \prg_return_true:
+        \else:
+          \prg_return_false:
+        \fi:
+      \else:
+        \prg_return_true:
+      \fi:
+    \else:
+      \prg_return_true:
+    \fi:
   }
 %    \end{macrocode}
 % \end{macro}
